side-gtw/envoy-gateway.yml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 5050
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          idle_timeout: 1s
          codec_type: auto
          access_log:
          - name: envoy.file_access_log
            config:
              path: "/tmp/envoy-connection.log"
          stat_prefix: ingress_http
          route_config:
            name: service_route
            virtual_hosts:
            - name: web_service_backend
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: web_service
          http_filters:
          - name: envoy.ext_authz
            config:
              failure_mode_allow: false
              grpc_service:
                google_grpc:
                  target_uri: opa:9191
                  stat_prefix: ext_authz
                timeout: 0.5s
          - name: envoy.router


    # - filters:
    #   - name: envoy.http_connection_manager
    #     typed_config:
    #       "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
    #       stat_prefix: ingress_http
    #       route_config:
    #         name: local_route
    #         virtual_hosts:
    #         - name: local_service
    #           domains: ["*"]
    #           routes:
    #           - match:
    #               prefix: "/"
    #             route:
    #               host_rewrite: www.google.com
    #               cluster: web_service
    #       http_filters:
    #       - name: envoy.ext_authz
    #         config:
    #           failure_mode_allow: false
    #           grpc_service:
    #             google_grpc:
    #               target_uri: opa:9191
    #               stat_prefix: ext_authz
    #             timeout: 0.5s
    #       - name: envoy.router



  clusters:
  - name: web_service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: web_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web
                port_value: 80
    #tls_context:
    #  sni: www.google.com
